Causeview Package Complete/src/objects/Volunteer_Shift__c.object
<CustomObject>
    <description>Outlines the time shifts for each Volunteer Role</description>
    <fields>
        <fullName>Confirmed_Hours__c</fullName>
        <description>Sum of all Volunteer Hours for the shift with Confirmed status.</description>
        <label>Confirmed Hours</label>
        <summarizedField>Volunteer_Hours__c.Service_Hours_Completed__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer_Shift__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <description>The day of the week the volunteer shift falls on.</description>
        <inlineHelpText>The day of the week the Volunteer Position Shift falls on</inlineHelpText>
        <label>Day of the Week</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <description>The duration of each shift in hours (End Time - Start Time).</description>
        <formula>( End_Time__c -  Start_Time__c) *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Day__c</fullName>
        <description>End date of the volunteer shift (MM/DD/YYYY 12:00 AM). Required for all but &quot;Flexible&quot; frequencies.</description>
        <label>End Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The date and time the volunteer shift ends (MM/DD/YYYY 12:00 AM).</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>A secondary ID, useful for data migration or a search index.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of the shift (Flexible, One-Time, Weekly, Bi-Weekly, Monthly).</description>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Kind_Value__c</fullName>
        <formula>IF(ISBLANK(Volunteer_Role__r.In_Kind_Hourly_Rate__c), Confirmed_Hours__c  *  $Setup.App_Settings__c.Volunteer_In_Kind_Hour_Value__c ,  
Confirmed_Hours__c  *  Volunteer_Role__r.In_Kind_Hourly_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In_Kind_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <description>The full address of the Organization where the volunteer shift will take place.</description>
        <formula>IF(  Location__c != &quot;&quot;, Location__r.BillingStreet &amp; &quot;, &quot; &amp; Location__r.BillingCity &amp; &quot;, &quot; &amp; Location__r.BillingState &amp; &quot;, &quot; &amp; Location__r.BillingPostalCode, &quot;No Location Set&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <description>The city of the Organization where the volunteer shift will take place.</description>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <description>The state of the Organization where the volunteer shift will take place.</description>
        <label>Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <description>The street address of the Organization where the volunteer shift will take place.</description>
        <label>Location Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip_Code__c</fullName>
        <description>The zip code of the Organization where the volunteer shift will take place.</description>
        <label>Location Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the Organization where the volunteer shift will take place.</description>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Volunteer_Position_Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logged_Hours__c</fullName>
        <description>Sum of all Volunteer Hours for the shift with Logged status.</description>
        <label>Logged Hours</label>
        <summarizedField>Volunteer_Hours__c.Service_Hours_Completed__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Logged, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer_Shift__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Show_Hours__c</fullName>
        <description>Sum of all Volunteer Hours for the shift with No-Show status.</description>
        <label>No-Show Hours</label>
        <summarizedField>Volunteer_Hours__c.Service_Hours_Completed__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>No-Show</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer_Shift__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <formula>Volunteer_Role__r.Name</formula>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Date__c</fullName>
        <description>The date of the volunteer shift (MM/DD/YYYY) used with one-time shifts.</description>
        <label>Shift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Day__c</fullName>
        <description>Start date of the volunteer shift (MM/DD/YYYY 12:00 AM) Required for all but &quot;Flexible&quot; frequencies.</description>
        <label>Start Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The date and time the volunteer shift starts (MM/DD/YYYY 12:00 AM).</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Entered__c</fullName>
        <description>Sum of all Volunteer Hours entered for the shift.</description>
        <formula>No_Show_Hours__c + Logged_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Entered</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the Application of the volunteer assigned to the shift.</description>
        <inlineHelpText>The Application that the Shift is related to</inlineHelpText>
        <label>Volunteer Application</label>
        <referenceTo>Volunteer_Application__c</referenceTo>
        <relationshipName>Volunteer_Position_Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunity__c</fullName>
        <description>Volunteer opportunity that the role belongs to.</description>
        <formula>Volunteer_Role__r.Volunteer_Opportunity__r.Name</formula>
        <label>Volunteer Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Program__c</fullName>
        <description>Volunteer program that the opportunity belongs to.  Role is linked to the opportunity.</description>
        <formula>TEXT(Volunteer_Role__r.Volunteer_Opportunity__r.Program__c)</formula>
        <label>Volunteer Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Role__c</fullName>
        <description>The ID of the Volunteer Role the shift is for</description>
        <inlineHelpText>The related Volunteer Role</inlineHelpText>
        <label>Volunteer Role</label>
        <referenceTo>Volunteer_Role__c</referenceTo>
        <relationshipLabel>Volunteer Shifts</relationshipLabel>
        <relationshipName>Volunteer_Position_Shifts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual assigned to position shift.</description>
        <label>Volunteer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Volunteer_Position_Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer Shift</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VS-{000000}</displayFormat>
        <label>Volunteer Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>